--- a/MyFirstHomework.html
+++ b/MyFirstHomework.html
@@ -32,7 +32,7 @@
     <div class="hero"></div>
     <main class="main">
         <article id="search-engine-optimization" class="search-engine-optimization">
-            <img src="images/search-engine-optimization.jpg" class="float-left"/>
+            <img src="images/search-engine-optimization.jpg" class="float-left" alt=""/>
             <header>
                 <h2>Search Engine Optimization</h2>
             </header>
