--- a/MyFirstHomework.html
+++ b/MyFirstHomework.html
@@ -32,7 +32,7 @@
     <div class="hero"></div>
     <main class="main">
         <article id="search-engine-optimization" class="search-engine-optimization">
-            <img src="images/search-engine-optimization.jpg" class="float-left" alt=""/>
+            <img src="images/search-engine-optimization.jpg" class="float-left" alt="Describe the image"/>
             <header>
                 <h2>Search Engine Optimization</h2>
             </header>
@@ -65,7 +65,7 @@
     <!-- This is the right-hand floating conatains  -->
 
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="benefit">
             <header>
               <h3>Lead Generation</h3>
             </header>
@@ -76,7 +76,7 @@
             </p>
         </section>
 
-        <section class="benefit-brand">
+        <section class="benefit">
             <header>
               <h3>Brand Awareness</h3>
             </header>  
@@ -87,12 +87,12 @@
             </p>
         </section>
 
-        <section class="benefit-cost">
+        <section class="benefit">
             <header>
               <h3>Cost Management</h3>
             </header>
 
-            <img src="images/cost-management.png">
+            <img src="images/cost-management.png" >
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
