added ReadMe.md and image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="hero"></div>
     <main class="main">
-        <article id="search-engine-optimization" class="search-engine-optimization">
+        <article id="search-engine-optimization" class="service">
             <img src="images/search-engine-optimization.jpg" class="float-left" alt="Describe the image"/>
             <header>
                 <h2>Search Engine Optimization</h2>
@@ -41,7 +41,7 @@
             </p>
         </article>
 
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="service">
             <img src="images/online-reputation-management.jpg" class="float-right"/>
             <header>
               <h2>Online Reputation Management</h2>
@@ -51,7 +51,7 @@
             </p>
         </article>
 
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="service">
             <img src="images/social-media-marketing.jpg" class="float-left"/>
             <header>
                 <h2>Social Media Marketing</h2>
