--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="hero"></div>
     <main class="main">
         <article id="search-engine-optimization" class="service">
-            <img src="images/search-engine-optimization.jpg" class="float-left" alt="Describe the image"/>
+            <img src="images/search-engine-optimization.jpg" class="float-left" alt="Notepad on table next to coffee and laptop"/>
             <header>
                 <h2>Search Engine Optimization</h2>
             </header>
@@ -42,7 +42,7 @@
         </article>
 
         <article id="online-reputation-management" class="service">
-            <img src="images/online-reputation-management.jpg" class="float-right"/>
+            <img src="images/online-reputation-management.jpg" class="float-right" alt="Man holding a phone viewing Pie charts on laptop screen"/>
             <header>
               <h2>Online Reputation Management</h2>
             </header>
@@ -52,7 +52,7 @@
         </article>
 
         <article id="social-media-marketing" class="service">
-            <img src="images/social-media-marketing.jpg" class="float-left"/>
+            <img src="images/social-media-marketing.jpg" class="float-left" alt="People with laptops and tablets sat around a table full of social media icons"/>
             <header>
                 <h2>Social Media Marketing</h2>
             </header>   
@@ -70,7 +70,7 @@
               <h3>Lead Generation</h3>
             </header>
 
-            <img src="images/lead-generation.png"/>
+            <img src="images/lead-generation.png" alt="Gear symbol image with downward arrow pointing to dollar sign"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -81,7 +81,7 @@
               <h3>Brand Awareness</h3>
             </header>  
 
-            <img src="images/brand-awareness.png"/>
+            <img src="images/brand-awareness.png" alt="Brand awareness icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -92,7 +92,7 @@
               <h3>Cost Management</h3>
             </header>
 
-            <img src="images/cost-management.png" >
+            <img src="images/cost-management.png" alt="Gear symbol image with dollar signs"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
